@@ -1,3 +1,9 @@
+2019-01-09  Tom Tromey  <tom@tromey.com>
+
+	* Makefile.in (gdb$(EXEEXT)): Use --entitlements when
+	code-signing.
+	* gdb-entitlement.xml: New file.
+
 2019-11-25  Tom de Vries  <tdevries@suse.de>
 
 	* contrib/words.sh: Add -c option.
